# amqp_to_redis

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
