[package]
name = "amqp_to_redis"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqp = "0.1.3"
redis = "0.21.5"
confy = "0.4.0"
serde = { version = "1.0.138", features = ["derive"]}